# data-excellence

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
assets/: dyvenia-template.tex
data_governance/op_model/: index.html
data_governance/overview/: index.html
data_governance/roles/: index.html
data_platform/cicd/: index.html
data_platform/data_maturity/: index.html
data_platform/deployments/: index.html
data_platform/iac/: index.html
data_platform/ingestion/: index.html
data_platform/integrations/: index.html
data_platform/lifecycle/: index.html
data_platform/methodology_overview/: index.html
data_platform/orchestration/: index.html
data_platform/overview/: index.html
data_platform/roles/: index.html
docs/: CNAME  index.md
docs/assets/: dyvenia-template.tex
docs/data_platform/: cicd.md  data_maturity.md  iac.md  ingestion.md  integrations.md  lifecycle.md  methodology_overview.md  orchestration.md  overview.md  roles.md
docs/marts/: ingestions.md  methodology.md  overview.md
docs/organizzation/: roles.md
marts/methodology/: index.html
marts/op_models/: index.html
marts/overview/: index.html
marts/roles/: index.html
organization/op_model/: index.html
organization/overview/: index.html
organization/roles/: index.html
search/: search_index.json
